added about text

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,6 +8,7 @@
     <body>
         <div class="main-content">
             {{>header}}
+            <p>This app was created by me. It uses weatherstack API to fetch current weather for a specified location.</p>
             <img src="/img/me.jpeg" class="portrait">
         </div>
         {{>footer}}
